--- a/package.json
+++ b/package.json
@@ -1,27 +1,41 @@
 {
-	"name": "frontend",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"body-parser": "1.15.0",
-		"errorhandler": "1.4.3",
-		"express": "4.13.4",
-		"sqlite3": "^5.0.2"
-	},
-	"scripts": {},
-	"eslintConfig": {
-		"extends": []
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "body-parser": "1.15.0",
+    "errorhandler": "1.4.3",
+    "express": "4.13.4",
+    "sqlite3": "^5.0.2"
+  },
+  "scripts": {},
+  "eslintConfig": {
+    "extends": []
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LenoreK/CS-SQL-Injection-Demo.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LenoreK/CS-SQL-Injection-Demo/issues"
+  },
+  "homepage": "https://github.com/LenoreK/CS-SQL-Injection-Demo#readme",
+  "description": ""
 }
